src/executorthread.h
@@ -132,7 +132,7 @@ private:
     AtomicValue<executor_state_t> state;
 
     AtomicValue<hrtime_t> now;  // record of current time
-    hrtime_t waketime; // set to the earliest
+    AtomicValue<hrtime_t> waketime; // set to the earliest
 
     Couchbase::RelaxedAtomic<hrtime_t> taskStart;
 
